--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 #root {
   max-width: 100%;
   margin: 0 auto;
