--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: rgb(194, 126, 0);
 }
 button:focus,
 button:focus-visible {
